<resources>
    <string name="app_name">A.R.ViewFinder</string>
    <string name="title_activity_maps">Map</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters</string>
    <string name="auth_failed">Authentication failed, check your credentials or sign up</string>

    <!-- Introduction Slider -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide1heading">A.R ViewFinder</string>
    <string name="slide1message">Is a geo location based augmented reality application submitted as partial fulfilment of the Newcastle University MSc E-Business (Information Systems) degree.</string>

    <string name="slide2heading">G.P.S</string>
    <string name="slide2message">Using sensors embedded in the mobile device and satellites in space, the application calculates GPS co-ordinates to pin point a users location and</string>

    <string name="slide3heading">A.R</string>
    <string name="slide3message">overlays geo-location specific information of real world objects at the users current position and surroundings over a camera view</string>

    <string name="slide4heading">Data</string>
    <string name="slide4message">from external service providers in real-time from their respective data servers such as Urban Observatory who have deployed a range of sensors around the city that record various conditions.</string>

    <string name="temperatureStatus">Temperature (Default)</string>
    <string name="humidityStatus">Humidity</string>
    <string name="soundStatus">Sound</string>
    <string name="pressureStatus">Pressure</string>
    <string name="attractionStatus">Attractions</string>
    <string name="universityStatus">University Buildings</string>
    <string name="foodStatus">Fast Food or Restaurants</string>
    <string name="title_activity_questionnaire">Questionnaire</string>

    <!-- questionnaire questions -->
    <string name="questionnaire_intro">
    "Introduction.\n\n"

    "Once again I would like to thank you for taking part the review of this prototype."
    "My name is Masitano Sichone and I am pursuing a Masters degree in E-Business (Information Systems)"The "
    "The"

    </string>
    <string name="intro_text">
        "Introduction.\n\n"

        "Once again I would like to thank you for taking part the review of this prototype."
        "My name is Masitano Sichone and I am pursuing a Masters degree in E-Business (Information Systems) and "
        "prototype that you have just used is part of the artefact's of my dissertation. \n\n"
        "The survey seeks the views of everyday people with regards to Augmented Reality as a technology, "
        "the dissemination of digital information from providers to consumers and the issues and challenges faced in doing so. \n\n"
        "The results of the survey will make a great contribution towards both academia and industry and you are encouraged to "
        "respond to all the questions to the best of your knowledge bearing in mind that your responses are confidential and will be anonymized. \n\n"
        "Access to the survey and any other application data is restricted to the researcher and supervision team. \n\n"
        "Please feel free to contact me on m.k.p.sichone2@newcastle.ac.uk for any questions or comments. \n\n "
    </string>

    <string name="large_text2">
        "Introduction.\n\n"

        "Once again I would like to thank you for taking part the review of this prototype."
        "My name is Masitano Sichone and I am pursuing a Masters degree in E-Business (Information Systems) and "
        "prototype that you have just used is part of the artefact's of my dissertation.\n"
        "The survey seeks the views of everyday people with regards to Augmented Reality as a technology "
        "the dissemination of digital information from providers to consumers and the issues and challenges faced in the execution.\n"
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
